--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -1,4 +1,4 @@
-<div class="content" ng-app="myApp" ng-controller="myCtr">
+<div class="contentM" ng-app="myApp" ng-controller="myCtr">
   <div ng-show="loading" >
     <div class="loader">
       <div class="spinner"></div>
@@ -7,77 +7,181 @@
   <div class="row gap"></div>
   <div class="row">
     <div class="col-3 sidebar-first">
-      <div class="card" style="width: 18rem;">
-        <img src="img/Blog.jpg" class="card-img-top" alt="...">
-        <img src="img/facebook.png" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 70px; height: 70px;" alt="Overlay Image">
-       
-        <div class="card-body cardImage">
-          <h5 class="card-title" style="margin-left:4rem">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        
+      <div class="card side1 text-center">
+        <div class="card-block">
+            <div class="user-image">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" class="rounded-circle img-fluid" style="width: 150px;" alt="User-Profile-Image">
+            </div>
+            <h6 class="f-w-600 m-t-25 m-b-10">Alessa Robert</h6>
+            <p class="text-muted">Active | Male | Born 23.05.1992</p>
+            <hr>
+            <p class="text-muted m-t-15">Activity Level: 87%</p>
+            <ul class="list-unstyled activity-leval">
+                <li class="active"></li>
+                <li class="active"></li>
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+            </ul>
+            <div class="bg-c-blue counter-block m-t-10 p-20">
+                <div class="row">
+                    <div class="col-4">
+                        <i class="fa fa-comment"></i>
+                        <p>1256</p>
+                    </div>
+                    <div class="col-4">
+                        <i class="fa fa-user"></i>
+                        <p>8562</p>
+                    </div>
+                    <div class="col-4">
+                        <i class="fa fa-suitcase"></i>
+                        <p>189</p>
+                    </div>
+                </div>
+            </div>
+            <p class="m-t-15 text-muted">Exploring the world with an artistic eye and creative spirit.</p>
         </div>
+        </div>
+        <div class="card side1 text-center">
+          <div class="card-body" >
+            <h5 class="card-title">People you may know</h5>
+            <hr />
+            <p style="float: left; display: block;"> <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
+                alt="avatar 1" style="width: 45px; height: 100%;">&nbsp;Luna Skye atrye</p>
+              <p style="float: left; display: block;">  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+                alt="avatar 1" style="width: 45px; height: 100%;">&nbsp;Phoenix Storm </p>
+              <p style="float: left; display: block;">  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3-bg.webp"
+                alt="avatar 1" style="width: 45px; height: 100%;">&nbsp;Ember Rose dssd</p>
+                <p style="float: left; display: block;">  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava4-bg.webp"
+                  alt="avatar 1" style="width: 45px; height: 100%;">&nbsp;Orion Frost obee</p>
+          </div>
+        </div>
+        <div class="event-list side1 text-center">
+          <div class="card l-bg-cherry">
+            <div class="card-statistic-3 p-4">
+                <div class="card-icon card-icon-large"><i class="fas fa-shopping-cart"></i></div>
+                <div class="mb-4">
+                    <h5 class="card-title mb-0">New Orders</h5>
+                </div>
+                <div class="row align-items-center mb-2 d-flex">
+                    <div class="col-8">
+                        <h2 class="d-flex align-items-center mb-0">
+                            3,243
+                        </h2>
+                    </div>
+                    <div class="col-4 text-right">
+                        <span>12.5% <i class="fa fa-arrow-up"></i></span>
+                    </div>
+                </div>
+                <div class="progress mt-1 " data-height="8" style="height: 8px;">
+                    <div class="progress-bar l-bg-cyan" role="progressbar" data-width="25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="card l-bg-blue-dark">
+          <div class="card-statistic-3 p-4">
+              <div class="card-icon card-icon-large"><i class="fas fa-users"></i></div>
+              <div class="mb-4">
+                  <h5 class="card-title mb-0">Customers</h5>
+              </div>
+              <div class="row align-items-center mb-2 d-flex">
+                  <div class="col-8">
+                      <h2 class="d-flex align-items-center mb-0">
+                          15.07k
+                      </h2>
+                  </div>
+                  <div class="col-4 text-right">
+                      <span>9.23% <i class="fa fa-arrow-up"></i></span>
+                  </div>
+              </div>
+              <div class="progress mt-1 " data-height="8" style="height: 8px;">
+                  <div class="progress-bar l-bg-green" role="progressbar" data-width="25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;"></div>
+              </div>
+          </div>
+      </div>
+      <div class="card l-bg-green-dark">
+        <div class="card-statistic-3 p-4">
+            <div class="card-icon card-icon-large"><i class="fas fa-ticket-alt"></i></div>
+            <div class="mb-4">
+                <h5 class="card-title mb-0">Ticket Resolved</h5>
+            </div>
+            <div class="row align-items-center mb-2 d-flex">
+                <div class="col-8">
+                    <h2 class="d-flex align-items-center mb-0">
+                        578
+                    </h2>
+                </div>
+                <div class="col-4 text-right">
+                    <span>10% <i class="fa fa-arrow-up"></i></span>
+                </div>
+            </div>
+            <div class="progress mt-1 " data-height="8" style="height: 8px;">
+                <div class="progress-bar l-bg-orange" role="progressbar" data-width="25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;"></div>
+            </div>
+        </div>
+    </div>
       </div>
     </div>
-    <div class="col-6 main">
-      <div class="row">
-        <div class="d-flex justify-content-between align-items-center col-6">
-
-       
-
-          <div class="d-flex flex-row">
-
-           
-            <button class="btn btn-primary new hover post-btn"  ng-class="{red: hover1}"
+    <div class="col-6 main"> 
+        <div class="row ">
+        <div class="col-6 actionBlock">
+            <a
+              href="#!/question"
+              class="menu"
+              class="{red: hover}"
+              ng-mouseenter="hover = true"
+              ng-mouseleave="hover = false"
+              ><button type="button" class="btn btn-dark" style="border-radius: 3rem; height: 4rem; width: 70%"
+              ><i class="fa fa-question-circle pr-2" aria-hidden="true"
+              ></i>&nbsp;Ask Questions</button></a
+            >
+        </div>
+        <div
+          class="col-6 actionBlock hover"
+          ng-class="{red: hover1}"
           ng-mouseenter="hover1 = true"
           ng-mouseleave="hover1 = false"
-          ng-click="show=true"><i class="fa fa-plus"></i> Post</button>
-            
-          </div>
-      
+          ng-click="show=true"
+        >
+        <button type="button" style="border-radius: 3rem; height: 4rem; width: 70%" class="btn btn-dark"><i class="fa fa-plus pr-2" aria-hidden="true"></i>&nbsp;Add a Post</button>
+        </div>
       </div>
-      <div class="input-search">
-        <i class="fa fa-search"></i>
-        <input type="text" class="searchbar" placeholder="Search Posts">
-      
-    </div>
-      </div>
-      <div class="row" ng-show="show">
+      <div class="row" ng-show="show" style="width:100%; margin-left: 0.5rem; margin-right: 1rem;">
         <form class="textBox" name="myForm" novalidate>
           <textarea
             class="form-control textArea"
             id="exampleFormControlTextarea1"
-            placeholder="Title"
+            placeholder="Enter user name"
             ng-model="userName"
             rows="1"
             required
+            style="box-shadow: none;"
           ></textarea>
           <textarea
             class="form-control textArea"
             id="exampleFormControlTextarea1"
             rows="3"
-            placeholder="what are you sharing today?"
+            placeholder="What are you sharing today?"
             ng-model="story"
             required
+            style="box-shadow: none;"
           ></textarea>
           <button
             type="button"
-            class="btn btn-primary postBtn"
+            class="btn btn-dark postBtn"
             ng-click="CancelFeed()"
           >
             Cancel
           </button>
           <button
             type="button"
-            class="btn btn-primary postBtn"
+            class="btn btn-dark postBtn"
             ng-disabled="myForm.$invalid"
             ng-click="addToFeed()"
             ng-disabled="disableButton"
           >
             Post
           </button>
-          <!-- ng-mouseenter="hover1 = true"
-          ng-mouseleave="hover1 = false"
-          ng-click="show=true" -->
         </form>
       </div>
       <br />
@@ -93,36 +197,48 @@
         </li>
       </ul>
     </div>
-    <div class="col-3 sidebar-second">
-      <div class="card notification-card" style="width: 14rem;">
+    <div class="col sidebar-second" style="margin-top: 3.5rem;">
+      <div class="card notification-card" style="margin-right: 1rem;">
       <div>
-        <h4>Recent Notification</h2>
+        <h4 style="text-align: center; padding-top: 15px;">Recent Notification</h2>
       </div>
+      <hr/>
         <div class="card-body notification-card">
           <div style="display:flex">
-            <img src="img/facebook.png" style="width: 40px; height: 40px">
-            <h6 style="margin-left:2rem">Rahul</h6>
-            <p style="margin-top:1rem;margin-left:-3rem">2 minute ago</p>
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava4-bg.webp" style="width: 40px; height: 40px">
+            <h6 style="margin-left:2rem">Christopher louis</h6>
+            <p style="margin-top:1rem;margin-left:-8rem">2 minute ago</p>
           </div>
           <div style="display:flex">
-            <img src="img/facebook.png" style="width: 40px; height: 40px">
-            <h6 style="margin-left:2rem">Saksham</h6>
-            <p style="margin-top:1rem;margin-left:-4rem">1 days ago</p>
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3-bg.webp" style="width: 40px; height: 40px">
+            <h6 style="margin-left:2rem">Mary Manollete</h6>
+            <p style="margin-top:1rem;margin-left:-7rem">1 days ago</p>
           </div>
           <div style="display:flex">
-            <img src="img/facebook.png" style="width: 40px; height: 40px">
-            <h6 style="margin-left:2rem">Varun</h6>
-            <p style="margin-top:1rem;margin-left:-3rem">2 days ago</p>
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp" style="width: 40px; height: 40px">
+            <h6 style="margin-left:2rem">Charles Cage</h6>
+            <p style="margin-top:1rem;margin-left:-6rem">2 days ago</p>
           </div>
           <div style="display:flex">
-            <img src="img/facebook.png" style="width: 40px; height: 40px">
-            <h6 style="margin-left:2rem">Suraj</h6>
-            <p style="margin-top:1rem;margin-left:-3rem">5 days ago</p>
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp" style="width: 40px; height: 40px">
+            <h6 style="margin-left:2rem">Adele Adam</h6>
+            <p style="margin-top:1rem;margin-left:-5rem">5 days ago</p>
           </div>
         </div>
       </div>
+      <div class="card shadow-sm" style="margin-right: 1rem; margin-top: 1rem;"> 
+        <img src="https://www.freepnglogos.com/uploads/notebook-png/download-laptop-notebook-png-image-png-image-pngimg-2.png" class="card-img-top" alt="..."> 
+        <div class="card-body"> 
+          <div class="clearfix mb-3"> 
+            <span class="float-start badge rounded-pill bg-primary">ASUS Rog</span>
+            <span class="float-end price-hp">12354.00&euro;</span>
+          </div> 
+          <h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</h5>
+          <div class="text-center my-4"> <a href="#" class="btn btn-warning">Check offer</a> 
+          </div>
+         </div> 
+        </div> 
+      </div>
+
     </div>
-   
-    </div>
-   
 </div>
