setting color theme

--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -14,7 +14,7 @@
             </div>
             <h6 class="f-w-600 m-t-25 m-b-10">Alessa Robert</h6>
             <p class="text-muted">Active | Male | Born 23.05.1992</p>
-            <hr>
+            <hr style=" color: #ade6ec; height:3px;">
             <p class="text-muted m-t-15">Activity Level: 87%</p>
             <ul class="list-unstyled activity-leval">
                 <li class="active"></li>
@@ -44,8 +44,9 @@
         </div>
         <div class="card side1 text-center">
           <div class="card-body" >
-            <h5 class="card-title">People you may know</h5>
-            <hr />
+            <h5 class="card-title" style="background: #ade5ec;
+            box-shadow: 1px 1px 0px 17px #ade5ec;">People you may know</h5>
+            <hr style="color:#ade6ec"/>
             <p style="float: left; display: block;"> <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
                 alt="avatar 1" style="width: 45px; height: 100%;">&nbsp;Luna Skye atrye</p>
               <p style="float: left; display: block;">  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
@@ -131,7 +132,7 @@
               class="{red: hover}"
               ng-mouseenter="hover = true"
               ng-mouseleave="hover = false"
-              ><button type="button" class="btn btn-dark" style="border-radius: 3rem; height: 4rem; width: 70%"
+              ><button type="button" class="btn askBtn" style="border-radius: 3rem; height: 4rem; width: 70%"
               ><i class="fa fa-question-circle pr-2" aria-hidden="true"
               ></i>&nbsp;Ask Questions</button></a
             >
@@ -143,7 +144,7 @@
           ng-mouseleave="hover1 = false"
           ng-click="show=true"
         >
-        <button type="button" style="border-radius: 3rem; height: 4rem; width: 70%" class="btn btn-dark"><i class="fa fa-plus pr-2" aria-hidden="true"></i>&nbsp;Add a Post</button>
+        <button type="button" style="border-radius: 3rem; height: 4rem; width: 70%" class="btn askBtn"><i class="fa fa-plus pr-2" aria-hidden="true"></i>&nbsp;Add a Post</button>
         </div>
       </div>
       <div class="row" ng-show="show" style="width:100%; margin-left: 0.5rem; margin-right: 1rem;">
@@ -202,7 +203,7 @@
       <div>
         <h4 style="text-align: center; padding-top: 15px;">Recent Notification</h2>
       </div>
-      <hr/>
+      <hr style="color: #ade6ec; height:3px;"/>
         <div class="card-body notification-card">
           <div style="display:flex">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava4-bg.webp" style="width: 40px; height: 40px">
@@ -226,7 +227,7 @@
           </div>
         </div>
       </div>
-      <div class="card shadow-sm" style="margin-right: 1rem; margin-top: 1rem;"> 
+      <div class="card shadow-sm" style="margin-right: 1rem; margin-top: 1rem; background: linear-gradient(transparent, rgba(134, 225, 241, 0.3));"> 
         <img src="https://www.freepnglogos.com/uploads/notebook-png/download-laptop-notebook-png-image-png-image-pngimg-2.png" class="card-img-top" alt="..."> 
         <div class="card-body"> 
           <div class="clearfix mb-3"> 
