--- a/frontendSocialFeed/component/postComponent.html
+++ b/frontendSocialFeed/component/postComponent.html
@@ -7,13 +7,11 @@
       <span ng-model="name">{{data.userName}}</span>
     </div>
     <div class="dropdown col-3">
-      <button
-        class="btn dp dropdown-toggle"
-        type="button"
+      <i class="fas fa-ellipsis-h dots" type="button"
         id="dropdownMenuButton"
         data-bs-toggle="dropdown"
-        aria-expanded="false"
-      ></button>
+        aria-expanded="false" 
+     ></i>
       <ul class="dropdown-menu drop" aria-labelledby="dropdownMenuButton">
         <li ng-click="deleteFeed(data)">
           <a class="dropdown-item hover"
@@ -81,7 +79,7 @@
     </div>
     <div class="col-2">
       <button
-        class="btn btn-dark addCommentButton"
+        class="btn addCommentButton"
         ng-click=" showCommentInput = false; addComment(data)"
       >
         Add
@@ -89,7 +87,7 @@
     </div>
     <div class="col-2">
       <button
-        class="btn btn-dark addCommentButton"
+        class="btn addCommentButton"
         ng-click=" showCommentInput = false; cancelAddComment(data)"
       >
         Cancel
@@ -103,7 +101,7 @@
       ng-repeat="singleComment in data.comments | orderBy: 'created_at':true"
     >
       <div class="row">
-        <div class="col-9">
+        <div class="col-10">
           <p class="commentList" ng-show="!singleComment.editMode">
             {{singleComment.text}}
           </p>
@@ -114,15 +112,32 @@
             ng-model="formData.editedComment"
             type="text"
           />
-        </div>
-        <div class="dropdown col-3">
           <button
-            class="btn dropdown-toggle dp"
+          type="button"
+          class="btn btn-floating commentBtn"
+              ng-click="Update(singleComment,data)"
+              ng-click="singleComment.editMode=false"
+              ng-show="singleComment.editMode"
+              ><i class="fa fa-check" aria-hidden="true"></i></button
+            >
+            
+            <button
             type="button"
-            id="dropdownMenuButton"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          ></button>
+            class="btn btn-floating commentBtn"
+            ng-click="Cancel(singleComment)"
+            ng-show="singleComment.editMode"
+            ng-click="singleComment.editMode=false"
+            ><i class="fa fa-times" aria-hidden="true"></i></button
+          >
+
+        </div>
+        <div class="dropdown col-2">
+          <i class="fas fa-ellipsis-h dots dp" type="button"
+        id="dropdownMenuButton"
+        data-bs-toggle="dropdown"
+        aria-expanded="false" 
+        ng-show="!singleComment.editMode"
+     ></i>
           <ul class="dropdown-menu drop" aria-labelledby="dropdownMenuButton">
             <li>
               <a
@@ -140,27 +155,6 @@
               >
             </li>
           </ul>
-        </div>
-        <div class="row comment-updation">
-          <div class="col-3">
-            <a
-              class="dropdown-item update hover"
-              ng-click="Update(singleComment,data)"
-              ng-click="singleComment.editMode=false"
-              ng-show="singleComment.editMode"
-              >Update</a
-            >
-          </div>
-          <div class="col-3">
-            <a
-              class="dropdown-item cancel hover"
-              ng-click="Cancel(singleComment)"
-              ng-show="singleComment.editMode"
-              ng-click="singleComment.editMode=false"
-              >Cancel</a
-            >
-          </div>
-          <div class="col-6"></div>
         </div>
       </div>
     </li>
