--- a/frontendSocialFeed/css/index.css
+++ b/frontendSocialFeed/css/index.css
@@ -11,6 +11,12 @@
       z-index: 100;
       color:red !important;
     }
+    .rounded-circle {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      border: solid 1px #ade6ec;
+      box-shadow: 0px 1px 20px 0px #ade6ec;
+    }
     .navbar-brand {
       padding-top: 0.3125rem;
       padding-bottom: 0.3125rem;
@@ -39,7 +45,9 @@
         font-weight: bold;
         font-size:2rem;
         /* margin-top: 2rem; */
-        color: #666;
+        color: #ade6ec !important;
+        text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+        border: #000;
         padding-left: 1rem;
     }
     .logoImg {
@@ -173,15 +181,25 @@
     font-size:15px;
   }
   .inp{
+    box-shadow: none !important;
       width:100%;
   }
   .commentInput {
-    width: 100% !important;
+    width: 70% !important;
   }
   .add-comment{
     margin-left:0.01rem ;
   }
+  .commentBtn{
+    height: 2rem;
+    width:3rem;
+    margin-bottom: 3px;
+    border-radius: 3rem !important;
+  background-color: #ade6ec !important;
+  }
   .addCommentButton{
+    box-shadow: none;
+    background: #ade6ec !important;
     width: 100% !important;
   }
   .commentList {
@@ -226,6 +244,10 @@
   }
   .posted{
     font-size:0.8rem;
+  }
+  .dots {
+    padding: 1rem;
+    padding-left: 5rem;
   }
   .nav-tabs .nav-link {
     margin-bottom: -1px;
@@ -281,11 +303,13 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.3));
+  background: linear-gradient(transparent, rgba(134, 225, 241, 0.3));
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
   z-index: 1;
 }
+
+
 
 .notification-card:hover:before {
   opacity: 1;
@@ -304,6 +328,11 @@
   margin-top:1rem;
   background: linear-gradient(to right, #373b44, #4286f4) !important;
   color: #fff;
+}
+.askBtn {
+    color: #414142;
+    box-shadow: 5px 8px 12px 3px #938989;
+    background: #ade6ec !important;
 }
 
 .l-bg-green-dark {
