--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -169,14 +169,14 @@
           ></textarea>
           <button
             type="button"
-            class="btn btn-dark postBtn"
+            class="btn postBtn"
             ng-click="CancelFeed()"
           >
             Cancel
           </button>
           <button
             type="button"
-            class="btn btn-dark postBtn"
+            class="btn postBtn"
             ng-disabled="myForm.$invalid"
             ng-click="addToFeed()"
             ng-disabled="disableButton"
