--- a/frontendSocialFeed/css/index.css
+++ b/frontendSocialFeed/css/index.css
@@ -296,6 +296,7 @@
   overflow: hidden;
 
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+    background: linear-gradient(transparent, rgba(134, 225, 241, 0.3));
 
 }
 
