--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -48,13 +48,13 @@
             box-shadow: 1px 1px 0px 17px #ade5ec;">People you may know</h5>
             <hr style="color:#ade6ec"/>
             <p style="float: left; display: block;"> <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
-                alt="avatar 1" style="width: 45px; height: 100%;">&nbsp;Luna Skye atrye</p>
+                alt="avatar 1" style="width: 45px; height: 45px;">&nbsp;Luna Skye atrye</p>
               <p style="float: left; display: block;">  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                alt="avatar 1" style="width: 45px; height: 100%;">&nbsp;Phoenix Storm </p>
+                alt="avatar 1" style="width: 45px; height: 45px;">&nbsp;Phoenix Storm </p>
               <p style="float: left; display: block;">  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3-bg.webp"
-                alt="avatar 1" style="width: 45px; height: 100%;">&nbsp;Ember Rose dssd</p>
+                alt="avatar 1" style="width: 45px; height: 45px;">&nbsp;Ember Rose dssd</p>
                 <p style="float: left; display: block;">  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava4-bg.webp"
-                  alt="avatar 1" style="width: 45px; height: 100%;">&nbsp;Orion Frost obee</p>
+                  alt="avatar 1" style="width: 45px; height: 45px;">&nbsp;Orion Frost obee</p>
           </div>
         </div>
         <div class="event-list side1 text-center">
@@ -197,8 +197,8 @@
         </li>
       </ul>
     </div>
-    <div class="col sidebar-second" style="margin-top: 3.5rem;">
-      <div class="card notification-card" style="margin-right: 1rem;">
+    <div class="col sidebar-second" style="margin-top: 3.5rem; margin-right: 1rem;">
+      <div class="card notification-card" >
       <div>
         <h4 style="text-align: center; padding-top: 15px;">Recent Notification</h2>
       </div>
@@ -223,6 +223,11 @@
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp" style="width: 40px; height: 40px">
             <h6 style="margin-left:2rem">Adele Adam</h6>
             <p style="margin-top:1rem;margin-left:-5rem">5 days ago</p>
+          </div>
+          <div style="display:flex">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" style="width: 40px; height: 40px">
+            <h6 style="margin-left:2rem">billie eilish yoy</h6>
+            <p style="margin-top:1rem;margin-left:-6rem">5 days ago</p>
           </div>
         </div>
       </div>
