--- a/frontendSocialFeed/component/postComponent.html
+++ b/frontendSocialFeed/component/postComponent.html
@@ -7,7 +7,8 @@
       <span ng-model="name">{{data.userName}}</span>
     </div>
     <div class="dropdown col-3">
-      <i class="fas fa-ellipsis-h dots" type="button"
+      <i class="fas fa-ellipsis-h dots dp" 
+        type="button"
         id="dropdownMenuButton"
         data-bs-toggle="dropdown"
         aria-expanded="false" 
@@ -43,17 +44,17 @@
   <!-- options LIKE DISLIKE COMMENT SHARE -->
   <div class="row card-header">
         <div class="col-3" ng-click="incrementLike(data)">
-        <a class="nav-link hover" style="color: black"><i class="fa fa-heart" style="color: black;"></i> Like</a>
+        <a class="nav-link hover" style="color: black"><i class="fa fa-heart" style="color: black;"></i> <span class ="text">Like</span></a>
         </div>
       <div class="col-3" ng-click="decrementLike(data)">
-        <a class="nav-link hover" style="color: black"><i class="fa fa-thumbs-down"></i> Dislike</a>
+        <a class="nav-link hover" style="color: black"><i class="fa fa-thumbs-down"></i><span class ="text"> Dislike</span></a>
       </div>
       <div class="col-3">
         <a class="nav-link hover" style="color: black" ng-click="showCommentInput = true;"
-          ><i class="fa fa-comment"></i> Comment</a>
+          ><i class="fa fa-comment"></i> <span class ="text">Comment</span></a>
       </div>
       <div class="col-3 sharebtn" style="float: right">
-        <a class="nav-link hover" style="color: black"><i class="fas fa-share"></i> Share</a>
+        <a class="nav-link hover" style="color: black"><i class="fas fa-share"></i><span class ="text">Share</span></a>
       </div>
   </div>
  
