--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -1,4 +1,9 @@
 <div class="contentM" ng-app="myApp" ng-controller="myCtr">
+  <div ng-show="loading">
+    <div class="loader">
+      <div class="spinner"></div>
+    </div>
+  </div>
   <div ng-show="loading" >
     <div class="loader">
       <div class="spinner"></div>
