--- a/frontendSocialFeed/css/index.css
+++ b/frontendSocialFeed/css/index.css
@@ -306,6 +306,21 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+.allloader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8); /* Adjust the background color and opacity as needed */
+  z-index: 1;
+}
+
+
+
 
 .notification-card {
   /* position: relative;
