--- a/frontendSocialFeed/css/index.css
+++ b/frontendSocialFeed/css/index.css
@@ -387,3 +387,18 @@
 .notification-card .card-body div:nth-child(n+2) {
   margin-top: 1rem;
 } */
+
+
+.center-div-share {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.sharediv {
+  margin-top: -33px;
+}
+.spanshare {
+  margin-left: 6rem;
+  font-size: 1.5rem;
+}
