--- a/frontendSocialFeed/component/postComponent.html
+++ b/frontendSocialFeed/component/postComponent.html
@@ -66,7 +66,7 @@
       
       
       <div class="col-3 sharebtn" style="float: right">
-        <a href="#!/share?userName={{data.userName}}&description={{data.description}}" class="nav-link hover" style="color: black">
+        <a href="#!/share?userName={{data.userName}}&description={{data.description}} & postedTime={{data.postedTime}}" class="nav-link hover" style="color: black">
           <i class="fas fa-share"></i>
           <span class="text">Share</span>
         </a>
