--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -325,10 +325,11 @@
               <div ng-show="showfirstOption && showPollOption">
                 <hr style="margin: 2px" />
                 <div
-                  style="padding-left: 1rem"
-                  ng-class="{blue: hover}"
-                  ng-mouseenter="hover = true"
-                  ng-mouseleave="hover = false"
+                style="padding-left: 1rem"
+                ng-class="{blue: isDiv2Clicked}"
+                ng-mouseenter="!isDiv1Clicked && (hover = true)"
+                ng-mouseleave="!isDiv1Clicked && (hover = false)"
+                ng-click="isDiv2Clicked = true; isDiv1Clicked = false; hover = false;"
                 >
                   <div class="form-check form-check-inline">
                     <input
@@ -337,6 +338,7 @@
                       name="inlineRadioOptions"
                       id="inlineRadio1"
                       value="option1"
+                      disabled
                     />
                     <label class="form-check-label" for="inlineRadio1"
                       >True</label
@@ -349,6 +351,7 @@
                       name="inlineRadioOptions"
                       id="inlineRadio2"
                       value="option2"
+                      disabled
                     />
                     <label class="form-check-label" for="inlineRadio2"
                       >False</label
@@ -356,10 +359,11 @@
                   </div>
                 </div>
                 <div
-                  style="padding-left: 1rem"
-                  ng-class="{blue: hover1}"
-                  ng-mouseenter="hover1 = true"
-                  ng-mouseleave="hover1 = false"
+                style="padding-left: 1rem"
+                ng-class="{blue: isDiv1Clicked}"
+                ng-mouseenter="!isDiv2Clicked && (hover = true)"
+                ng-mouseleave="!isDiv2Clicked && (hover = false)"
+                ng-click="isDiv1Clicked = true; isDiv2Clicked = false; hover = false;"
                 >
                   <div class="form-check form-check-inline">
                     <input
@@ -368,6 +372,7 @@
                       name="inlineRadioOptions"
                       id="inlineRadio1"
                       value="option1"
+                      disabled
                     />
                     <label class="form-check-label" for="inlineRadio1"
                       >Strongly Agree</label
@@ -380,6 +385,7 @@
                       name="inlineRadioOptions"
                       id="inlineRadio2"
                       value="option2"
+                      disabled
                     />
                     <label class="form-check-label" for="inlineRadio2"
                       >Agree</label
@@ -392,6 +398,8 @@
                       name="inlineRadioOptions"
                       id="inlineRadio3"
                       value="option3"
+                      disabled
+
                     />
                     <label class="form-check-label" for="inlineRadio3"
                       >Neutral</label
@@ -402,10 +410,11 @@
                       class="form-check-input"
                       type="radio"
                       name="inlineRadioOptions"
-                      id="inlineRadio3"
-                      value="option3"
+                      id="inlineRadio4"
+                      value="option4"
+                      disabled
                     />
-                    <label class="form-check-label" for="inlineRadio3"
+                    <label class="form-check-label" for="inlineRadio4"
                       >Disagree</label
                     >
                   </div>
@@ -414,10 +423,11 @@
                       class="form-check-input"
                       type="radio"
                       name="inlineRadioOptions"
-                      id="inlineRadio3"
-                      value="option3"
+                      id="inlineRadio5"
+                      value="option5"
+                      disabled
                     />
-                    <label class="form-check-label" for="inlineRadio3"
+                    <label class="form-check-label" for="inlineRadio5"
                       >Strongly Disagree</label
                     >
                   </div>
